2007-06-26 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: display warning if function list
	  is empty

2007-06-25 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added feature Requests [1510635]
	  Multiple infiles for sdcclib.

2007-06-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
	* src/SDCCast.c (inlineFindMaxBlockno, createFunction): fixed
	  bug 1731741

2007-06-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: removed option -C since SDCC compiler doesn't know
	  how to handle comments, so they have to be removed by the
	  preprocessor; fixed bug #1738926:SDCC #4852: broken option -V
	* src/SDCCmain.c, src/SDCCargs.h, src/ds390/main.c, src/mcs15/main.c,
	  src/pic16/main.c, src/pic/main.c, src/z80/main.c,
	  support/Util/SDCCerr.c, support/Util/SDCCerr.h:
	  table driven option hadling

2007-06-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType),
	* src/SDCCicode.c (geniCodeConditional): moved optimization for '?' from
	  iCode to ast level to fix bug 1738367
	* support/regression/tests/bug1738367.c: new, added

2007-06-15 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	* device/lib/pic16/pics.all,
	* device/include/pic16/pic18fregs.h,
	* device/include/pic16/pic18f[24][45]20.h,
	* device/lib/pic16/libdev/pic18f[24][45]20.c: added support for
	  18f2420, 18f2520, and 18f4420 devices, updated 18f4520 definitions
	* device/lib/pic16/Makefile.in: faster cleanup

2007-06-13 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added 177.i (mov from a is slightly cheaper)

2007-06-13 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c: prevent NULL pointer dereference, avoid warning

2007-06-12 Raphael Neider <rneider AT web.de>

	* support/scripts/inc2h.pl: conditionally emit defines for SFR bits,
	  suppress bit defines if NO_BIT_DEFINES is #define'd
	* device/include/pic/pic*.h: recreated all headers to include